fix header img, fix align items ul, li

--- a/style.css
+++ b/style.css
@@ -33,28 +33,32 @@ header{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    gap: 10px;
 }
 nav{
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 .listaHeader{
-    width: 100%;
-    height: 100%;
+    width: fit-content;
+    height: fit-content;
     align-items: center;
     justify-content: space-around;
     display: flex;
+    gap: 30px;
     
 }
 li{
     letter-spacing: 2px;
-    font-size: 20px;
+    font-size: 10px;
 }
 .logoWe{
     width: 60px;
     height: 60px;
+    margin-right: -30px;
 }
 .playerMain{
     display: flex;
@@ -99,6 +103,8 @@ li{
 }
 
 h2 {
+    font-size: 15px;
+    text-wrap: wrap;
     padding: 0;
     margin-bottom: 0;
 }
